--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "tarantool/benchmarks",
     "description": "Benchmarks for Tarantool PHP connectors.",
-    "keywords": ["tarantool", "nosql", "client", "connector", "benchmark", "performance", "async", "swoole"],
+    "keywords": ["tarantool", "nosql", "client", "connector", "benchmark", "performance", "ext-swoole", "ext-async", "ext-parallel"],
     "type": "library",
     "license": "MIT",
     "authors": [
@@ -14,15 +14,16 @@
         "php": "^7.1",
         "ext-json": "*",
         "phpbench/phpbench": "^1.0@dev",
-        "rybakit/msgpack": "@dev",
+        "rybakit/msgpack": "^0.6.1",
         "symfony/filesystem": "^4.3",
-        "tarantool/client": "@dev"
+        "tarantool/client": "dev-master"
     },
     "suggest": {
         "ext-msgpack": "For benchmarking Tarantool\\Client\\Packer\\PeclPacker",
         "ext-tarantool": "For benchmarking the official PHP connector",
-        "ext-swoole": "For benchmarking in async mode",
-        "ext-async": "For benchmarking in async mode"
+        "ext-swoole": "For benchmarking connectors in async mode",
+        "ext-async": "For benchmarking connectors in async mode",
+        "ext-parallel": "For benchmarking connectors in parallel mode"
     },
     "autoload": {
         "psr-4": {
