--- a/benchmarks/Parallel/phpbench.json.dist
+++ b/benchmarks/Parallel/phpbench.json.dist
@@ -5,7 +5,7 @@
     "php_disable_ini": true,
     "php_config": {
         "zend_extension": ["opcache.so"],
-        "extension": ["parallel.so", "msgpack.so"],
+        "extension": ["parallel.so", "msgpack.so", "tarantool.so"],
         "opcache.enable_cli": 1,
         "pcre.jit": 1
     },
